[workspace]
members = [
  "length_of_last_word_58",
  "find_the_index_of_the_first_occurrence_in_a_string_28",
  "two_sum_1",
  "search_insert_position_35",
  "valid_parentheses_20",
  "plus_one_66",
  "add_binary_67",
  "climbing_stairs_70",
  "merge_sorted_array_88",
  "pascals_triangle_118",
  "valid_plaindrome_125",
  "single_number_136",
  "excel_sheet_column_title_168",
  "majority_element_169",
  "excel_sheet_column_number_171",
  "reverse_bits_190",
  "number_of_1_bits_191",
  "happy_number_202",
  "isomorphic_strings_205",
  "contains_duplicate_217",
  "contains_duplicate_ii_219",
]
